<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blueBackground"
    android:visibility="visible"
    android:id="@+id/authenticationActivity"
    tools:context=".activities.AuthenticationActivity">

    <Button
        android:id="@+id/buttonForgottenPwd"
        android:layout_width="299dp"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:background="@null"
        android:fontFamily="@font/croissant_one"
        android:onClick="onForgottenPwdClick"
        android:text="@string/forgottenPwd"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSignUp_Authentication" />

    <Button
        android:id="@+id/buttonSignUp_Authentication"
        android:layout_width="213dp"
        android:layout_height="48dp"
        android:background="@drawable/button_background"
        android:fontFamily="@font/croissant_one"
        android:onClick="onSignUpClick"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonLogInGoogle"
        app:layout_constraintVertical_bias="0.14"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/inputPassword"
        android:layout_width="204dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/textfield_background"
        android:fontFamily="@font/croissant_one"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputEmail" />

    <EditText
        android:id="@+id/inputEmail"
        android:layout_width="208dp"
        android:layout_height="45dp"
        android:layout_marginTop="228dp"
        android:background="@drawable/textfield_background"
        android:ems="10"
        android:fontFamily="@font/croissant_one"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="213dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_background"
        android:color="@android:color/transparent"
        android:fontFamily="@font/croissant_one"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="22sp"
        android:textStyle="bold"
        android:onClick="onSignIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputPassword" />

    <View
        android:id="@+id/view_1"
        android:layout_width="150dp"
        android:layout_height="1dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:background="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonLogin" />

    <View
        android:id="@+id/view_"
        android:layout_width="160dp"
        android:layout_height="1dp"
        android:layout_marginTop="24dp"
        android:background="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.063"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonLogin" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="226dp"
        android:layout_height="204dp"
        android:layout_marginTop="48dp"
        android:contentDescription="@string/logo_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.518"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView5"
        app:srcCompat="@drawable/sun" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/croissant_one"
        android:text="@string/or"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/view_1"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toEndOf="@+id/view_"
        app:layout_constraintTop_toBottomOf="@+id/buttonLogin" />

    <ImageButton
        android:id="@+id/imageButtonGoogle"
        android:layout_width="27dp"
        android:layout_height="24dp"
        android:layout_marginStart="76dp"
        android:layout_marginLeft="76dp"
        android:layout_marginTop="8dp"
        android:adjustViewBounds="true"
        android:background="@android:color/transparent"
        android:contentDescription="@string/google_logo"
        android:maxWidth="100dp"
        android:maxHeight="100dp"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButtonTwitter"
        app:srcCompat="@drawable/google" />

    <ImageButton
        android:id="@+id/imageButtonTwitter"
        android:layout_width="42dp"
        android:layout_height="44dp"
        android:layout_marginStart="68dp"
        android:layout_marginLeft="68dp"
        android:layout_marginTop="12dp"
        android:adjustViewBounds="true"
        android:background="@android:color/transparent"
        android:contentDescription="@string/twitter_logo"
        android:maxWidth="100dp"
        android:maxHeight="100dp"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view_"
        app:srcCompat="@drawable/twitter" />

    <Button
        android:id="@+id/buttonLogInGoogle"
        android:layout_width="201dp"
        android:layout_height="31dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="44dp"
        android:background="@null"
        android:fontFamily="@font/croissant_one"
        android:text="@string/log_in_with_google"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:visibility="visible"
        app:layout_constraintStart_toEndOf="@+id/imageButtonGoogle"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Button
        android:id="@+id/buttonLogInTwitter"
        android:layout_width="201dp"
        android:layout_height="31dp"
        android:layout_marginTop="4dp"
        android:background="@null"
        android:fontFamily="@font/croissant_one"
        android:text="@string/log_in_with_twitter"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:visibility="visible"
        app:layout_constraintStart_toEndOf="@+id/imageButtonTwitter"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="351dp"
        android:layout_height="229dp"
        android:contentDescription="@string/ht_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/happythoughtscroissant" />

</androidx.constraintlayout.widget.ConstraintLayout>