<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/TwitterLoginActivity"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:gravity="center">


    <androidx.cardview.widget.CardView
...
