...
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@android:color/white"
android:id="@+id/HomePageActivity"
tools:context=".activities.HomepageActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="83dp"
        android:layout_height="741dp"
...
            android:maxHeight="100dp"
            android:scaleType="fitXY"
            android:onClick="onOtherFilter"
            app:srcCompat="@drawable/others_icon_white" />

        <ImageButton
            android:id="@+id/buttonCategorySettings"
            android:layout_width="wrap_content"
            android:layout_height="52dp"
            android:layout_marginTop="15dp"
            android:adjustViewBounds="true"
            android:background="@android:color/transparent"
            android:contentDescription="@string/logo_category_settings"
...
